--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "apexcharts": "^3.18.0",
     "axios": "^0.19.2",
     "date-fns": "^2.11.1",
+    "polished": "^3.5.1",
     "proptypes": "^1.1.0",
     "react": "^16.13.1",
     "react-apexcharts": "^1.3.7",
